--- a/frontend/src/styles/chat/_chat.module.scss
+++ b/frontend/src/styles/chat/_chat.module.scss
@@ -25,7 +25,57 @@
   }
 
   & > .chat_log {
+    padding: 12px;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    row-gap: 6px;
+
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #ddd;
+      border-radius: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: inherit;
+      border-radius: 8px;
+    }
+
+    & > div {
+      display: flex;
+      align-items: center;
+      font-size: 1.125rem;
+
+      & > span {
+        padding: 8px;
+        border: 1px solid;
+        border-radius: 12px;
+      }
+    }
+
+    & > .left {
+      justify-content: flex-start;
+
+      & > span {
+        background-color: rgb(164, 163, 163);
+        color: white;
+      }
+    }
+
+    & > .right {
+      justify-content: flex-end;
+
+      & > span {
+        border-color: rgb(248, 248, 1);
+        background-color: rgb(248, 248, 1);
+        color: black;
+      }
+    }
   }
 
   & > .input_wrapper {
